# gh-gl-sync

./: .gitignore  Cargo.toml
config/: config.yml
db/migrations/: V1__create_projects_table.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/db/: migration.rs  mod.rs
src/handlers/: mod.rs
src/providers/: github_provider.rs  gitlab_provider.rs  mod.rs
src/repo/: commit.rs  comparer.rs  error.rs  mod.rs
