[package]
name = "gh-gl-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { git = "https://github.com/rust-lang/git2-rs.git", tag = "0.16.1" }
sha256 = { git = "https://github.com/baoyachi/sha256-rs.git", tag = "1.1.1" }
uuid = { git = "https://github.com/uuid-rs/uuid.git", tag = "1.3.0", features = [ "v4", "fast-rng" ] }
tokio = { version = "1.26.0", features = [ "full" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { git = "https://github.com/dtolnay/serde-yaml.git", tag = "0.9.19" }
rouille = "3.6.1"
octocrab = "0.18.1"
async-trait = "0.1.66"
gitlab = "0.1506.0"

[patch.crates-io]
serde = { git = "https://github.com/serde-rs/serde.git", tag = "v1.0.152" }
rouille = { git = "https://github.com/tomaka/rouille.git", tag = "v3.6.1" }
octocrab = { git = "https://github.com/sebgrz/octocrab.git", branch = "master" }
async-trait = { git = "https://github.com/dtolnay/async-trait.git", tag = "0.1.66" }
tokio = { git = "https://github.com/tokio-rs/tokio.git", tag = "tokio-1.26.0" }
gitlab = { git = "https://gitlab.kitware.com/utils/rust-gitlab.git", tag = "v0.1506.0" }

[dev-dependencies]
test-case = { git = "https://github.com/frondeus/test-case.git", tag = "v2.2.2" }
